--- a/start-here/package.json
+++ b/start-here/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
   }
