--- a/start-here/package.json
+++ b/start-here/package.json
@@ -15,5 +15,8 @@
     "eslint-plugin-import": "^2.22.1",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
-  }
+  },
+    "browsersList": [
+    "last 2 Firefox versions"
+  ]
 }
